--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<body> 
+<html lang "pt-br">
+<head>
+<link href= "./style.css" "type=text/css" rel="stylesheet">
+<title>"OS MELHORES GOLS DE CRISTIANO RONALDO"</title>
+</head>
+  <body>  
 <header> Futebol</header>
   <p> OS MELHORES GOLS DE CRISTIANO RONALDO </p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/4q2pFjrHRIU?si=-eN3t0CY5BWKeiv6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
