--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/4q2pFjrHRIU?si=-eN3t0CY5BWKeiv6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 <header>"Umas das melhores fases de Cristiano em sua carreira"</header>
-<div>
+<div class=chamada-texto>
 <h1>Uma das melhores fases de Cristiano em sua carreira</h1>
 <p>#futebol #CristianoRonaldo</p>
 </div>
