--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html lang "pt-br">
 <head>
 <link href= "./style.css" "type=text/css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <title>"OS MELHORES GOLS DE CRISTIANO RONALDO"</title>
 </head>
   <body>  
