--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
   <section class="chamada">
 <h2>Dribles e Gols</h2>
 <div class="categoria-videos">
+<a href = >
+  <img src = />
+</a>
+<a href = >
+  <img src = />
+</a>
+<a href = >
+  <img src = />
+</a>
 </div>
   </section>
   
