--- a/index.html
+++ b/index.html
@@ -22,21 +22,18 @@
   <section class="chamada">
 <h2>Dribles e Gols</h2>
 <div class="categoria-videos">
-<a href = >
-  <img src = />
+<a href = https://www.youtube.com/watch?v=DGexm_EkGRg>
+  <img src =https://img.youtube.com/vi/DGexm_EkGRg/maxresdefault.jpg />
 </a>
-<a href = >
-  <img src = />
+<a href = https://www.youtube.com/watch?v=p5gwyBfz5_w >
+  <img src = https://img.youtube.com/vi/p5gwyBfz5_w/maxresdefault.jpg/>
 </a>
-<a href = >
-  <img src = />
+<a href = link do videhttps://www.youtube.com/watch?v=jfU601pgWMgo>
+  <img src = https://img.youtube.com/vi/jfU601pgWMgo/maxresdefault.jpg/>
 </a>
 </div>
   </section>
   
 </body>
 </html>  
-https://www.youtube.com/watch?v=NNYe4DTWGUk
-https://www.youtube.com/results?search_query=dribles+do+ronaldinho+gaucho
-https://www.youtube.com/results?search_query=dribles+do+cristiano+ronaldo
 
